--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,7 @@
 * Migrate manifest to v3.
 * Re-work special handling for AWS IAM login.
 * Add support for custom DOM/value pairs that are filled in the login forms.
+* Add support for MFA TOTP codes via pass-otp plugin.
 
 == v0.3.0
 
