--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,5 +1,16 @@
 = Changelog
 
+== v0.5.0
+
+*Changes*
+
+* Migrate from distutils to setuptools.
+* Rename nativePass script to chrome_pass
+
+*Improvements*
+
+* Allow special placeholders in key/value pairs.
+
 == v0.4.0
 
 *Improvements*
