--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -5,6 +5,7 @@
 *Changes*
 
 * Deprecate `otpoauth` custom input field with `pass__otpoauth` for consistency with the pass and username custom input fields.
+* Add `version` flag to chrome_pass command.
 
 == v0.5.0
 
